Fixed bug that used to appear in different res.
This Skill Images used to Overlap, " Contact Me" . Fixed that with dynamic styling , now it fits perfectly. Also it works with mobile devices.

--- a/style.css
+++ b/style.css
@@ -180,8 +180,7 @@ span {
 
 .skill-img {
   padding: 20px;
-  height: 200px;
-  width: 200px;
+  width: 10vw;
   object-fit: cover;
 }
 
